# mace

./: .bazelrc  .clang-format  .gitignore  .gitlab-ci-new.yml  .gitlab-ci.yml  .gitmodules  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  Dockerfile  ISSUE_TEMPLATE.md  JOBS.md  README.md  README_zh.md  RELEASE.md  ROADMAP.md  WORKSPACE  benchmark.sh  benchmark_model.cc  build_mace_run.sh  build_production_code.sh  clear_env.sh  config  env.sh  example.yaml  generate_data.py  generate_model_code.sh  generate_production_code.sh  libmace.mri  libmace_local.mri  local_validate_model.sh  mace  mace_run.cc  mace_tools.py  merge_libs.sh  model.config  stat_summarizer.cc  tuning_run.sh  validate.py  (+3 more)
examples/cli/: BUILD.bazel  README.md  example.cc
include/: BUILD.bazel  CMakeLists.txt
mace/: BUILD  BUILD.bazel  CMakeLists.txt  mace.bzl  mace_version_script.lds
mace/benchmark/: BUILD  benchmark_model.cc  model_throughput_test.cc  stat_summarizer.cc  stat_summarizer.h  statistics.cc  statistics.h
mace/codegen/: BUILD  BUILD.bazel  CMakeLists.txt  model_version_script.lds
mace/core/: BUILD  BUILD.bazel  CMakeLists.txt  allocator.cc  allocator.h  arg_helper.cc  arg_helper.h  bfloat16.h  buffer.h  common.h  device.cc  device.h  device_context.cc  device_context.h  file_storage.cc  file_storage.h  file_storage_engine.cc  file_storage_engine.h  fp16.h  future.h  half.h  integral_types.h  kv_storage.cc  kv_storage.h  logging.cc  logging.h  mace.cc  mace.h  mace_runtime.cc  mace_tensor_impl.h  mace_types.cc  macros.h  memory_optimizer.cc  memory_optimizer.h  net.cc  net.h  net_def_adapter.cc  net_def_adapter.h  net_optimizer.cc  net_optimizer.h  (+33 more)
mace/dsp/: BUILD  hexagon_control_wrapper.cc  hexagon_control_wrapper.h  hexagon_control_wrapper_test.cc  hexagon_nn_ops.h  ops.h
mace/examples/: BUILD  README.md  benchmark_example.cc  example.cc  helloworld.cc  mace_run.cc
mace/flows/: BUILD.bazel  CMakeLists.txt  flow_registry.cc
mace/kernels/: BUILD  activation.cc  activation.h  addn.cc  addn.h  argmax.cc  argmax.h  batch_norm.cc  batch_norm.h  batch_to_space.cc  batch_to_space.h  bias_add.cc  bias_add.h  buffer_inverse_transform.cc  buffer_inverse_transform.h  buffer_to_image.h  buffer_transform.cc  buffer_transform.h  cast.cc  channel_shuffle.cc  channel_shuffle.h  concat.cc  concat.h  conv_2d.cc  conv_2d.h  conv_pool_2d_base.h  conv_pool_2d_util.cc  conv_pool_2d_util.h  crop.cc  crop.h  cwise.h  deconv_2d.cc  deconv_2d.h  depth_to_space.cc  depth_to_space.h  depthwise_conv2d.cc  depthwise_conv2d.h  eltwise.cc  eltwise.h  expand_dims.cc  (+80 more)
mace/libmace/: BUILD  BUILD.bazel  CMakeLists.txt  capability.cc  combine_static_libs.sh  gpu_context_builder.cc  mace.cc  mace.mri.in  mace_engine.cc  mace_engine_config.cc  mace_runtime.cc  mace_tensor.cc  mace_version_script.lds
mace/ops/: BUILD  BUILD.bazel  CMakeLists.txt  activation.cc  activation.h  activation_benchmark.cc  activation_test.cc  addn.cc  addn.h  addn_benchmark.cc  addn_test.cc  argmax.cc  argmax.h  argmax_test.cc  batch_norm.cc  batch_norm.h  batch_norm_benchmark.cc  batch_norm_test.cc  batch_to_space.cc  batch_to_space.h  batch_to_space_benchmark.cc  bias_add.cc  bias_add.h  bias_add_benchmark.cc  bias_add_test.cc  buffer_inverse_transform.cc  buffer_inverse_transform.h  buffer_to_image.cc  buffer_to_image.h  buffer_to_image_benchmark.cc  buffer_to_image_test.cc  buffer_transform.cc  buffer_transform.h  buffer_transform_test.cc  cast.cc  cast.h  cast_test.cc  channel_shuffle.cc  channel_shuffle.h  channel_shuffle_benchmark.cc  (+272 more)
mace/port/: BUILD.bazel  CMakeLists.txt  README.md  env.cc  env.h  env_test.cc  file_system.cc  file_system.h  logger.cc  logger.h  port-arch.h
mace/proto/: BUILD  BUILD.bazel  CMakeLists.txt  caffe.proto  mace.proto  micro_mem.proto  qnn_cache.proto  stats.proto
mace/public/: BUILD  BUILD.bazel  mace.h  mace_runtime.h  mace_types.h
mace/rpcmems/: BUILD.bazel  CMakeLists.txt  rpcmem_factory.cc
mace/runtimes/: BUILD.bazel  CMakeLists.txt  runtime_registry.cc
mace/test/: BUILD  BUILD.bazel  device_capability_api_test.cc  mace_api_exception_test.cc  mace_api_mt_test.cc  mace_api_test.cc  mace_api_test.h
mace/tools/: BUILD.bazel  CMakeLists.txt  mace_run.cc
mace/utils/: BUILD  BUILD.bazel  CMakeLists.txt  command_line_flags.cc  command_line_flags.h  conf_util.h  count_down_latch.h  count_down_latch_test.cc  detection_output.cc  env_time.h  logging.cc  logging.h  logging_test.cc  macros.h  math.h  memory.h  memory_logging.h  quantize.h  rwlock.h  spinlock.h  spinlock_test.cc  statistics.cc  statistics.h  status.cc  stl_util.h  string_util.cc  string_util.h  thread_pool.cc  thread_pool.h  thread_pool_test.cc  timer.h  transpose.h  tuner.h  tuner_development.cc  tuner_production.cc  tuner_test.cc  utils.cc  utils.h  utils_test.cc
micro/: .gitignore  .gitlab-ci.yml  BUILD.bazel  CMakeLists.txt  micro.bzl
micro/base/: BUILD.bazel  CMakeLists.txt  logger.cc  logger.h  logging.h  serialize.cc  serialize.h  serialize_type.h  types.h  utils.cc  utils.h  value_to_str.cc  value_to_str.h
micro/cmake/: config_gcc_arm.cmake  find_hexagon_sdk.cmake
micro/codegen/: BUILD.bazel  CMakeLists.txt
micro/examples/: CMakeLists.txt
micro/framework/: BUILD.bazel  CMakeLists.txt  graph.cc  graph.h  micro_engine.cc  op_context.cc  op_context.h  operator.cc  operator.h  scratch_buffer.cc  scratch_buffer.h
micro/include/: BUILD.bazel  CMakeLists.txt
micro/model/: BUILD.bazel  CMakeLists.txt  argument.cc  argument.h  const_tensor.cc  const_tensor.h  input_output_info.cc  input_output_info.h  net_def.cc  net_def.h  operator_def.cc  operator_def.h  output_shape.cc  output_shape.h
micro/ops/: BUILD.bazel  CMakeLists.txt  activation.cc  activation.h  argmax.h  bias_add.cc  bias_add.h  cast.h  concat.h  eltwise.cc  eltwise.h  expand_dims.cc  expand_dims.h  matmul.cc  matmul.h  reduce.cc  reduce.h  reshape.cc  reshape.h  shape.cc  shape.h  softmax.cc  softmax.h  squeeze.cc  squeeze.h  stack.h  strided_slice.h
micro/port/: BUILD.bazel  CMakeLists.txt  api.cc  api.h
micro/test/: CMakeLists.txt
(+1781 files in other folders)
