config_setting(
    name = "linux_base",
    define_values = {
        "linux_base": "true",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "android",
    values = {
        "crosstool_top": "//external:android/crosstool",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux",
    define_values = {
        "linux": "true",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "darwin",
    define_values = {
        "darwin": "true",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "android_armv7",
    values = {
        "crosstool_top": "//external:android/crosstool",
        "cpu": "armeabi-v7a",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "android_arm64",
    values = {
        "crosstool_top": "//external:android/crosstool",
        "cpu": "arm64-v8a",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "arm_linux_aarch64",
    values = {
        "crosstool_top": "//tools/aarch64_compiler:toolchain",
        "cpu": "aarch64",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "arm_linux_armhf",
    values = {
        "crosstool_top": "//tools/arm_compiler:toolchain",
        "cpu": "armeabi-v7a",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "neon_enabled",
    define_values = {
        "neon": "true",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "apu_enabled",
    define_values = {
        "apu": "true",
    },
    values = {
        "crosstool_top": "//external:android/crosstool",
        "cpu": "arm64-v8a",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "hexagon_enabled",
    define_values = {
        "hexagon": "true",
    },
    values = {
        "crosstool_top": "//external:android/crosstool",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "hta_enabled",
    define_values = {
        "hta": "true",
    },
    values = {
        "crosstool_top": "//external:android/crosstool",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "openmp_enabled",
    define_values = {
        "openmp": "true",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "opencl_enabled",
    define_values = {
        "opencl": "true",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "quantize_enabled",
    define_values = {
        "quantize": "true",
    },
    visibility = ["//visibility:public"],
)
